--- a/sales-journal/index.html
+++ b/sales-journal/index.html
@@ -62,7 +62,7 @@
       let table;
       let initialFolioNumber = 1;
       function updateFolioNumber(counter) {
-        return "Sl " + String(counter).padStart(3, "0");
+        return "SL " + String(counter).padStart(3, "0");
       }
       form.addEventListener("submit", function (e) {
         e.preventDefault();
